// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Dialog 1`] = `
Array [
  <div
    aria-hidden="true"
    className="sc-bZQynM ppJum"
    onClick={[Function]}
  />,
  <div
    className="sc-htoDjs jbwKzz"
  >
     
    <div
      className="sc-cSHVUG jXoPvl sc-htpNat fLfkdc sc-bwzfXH iRJfEt"
    >
      <header
        className="sc-iwsKbI gWFyxR"
      >
        <h2
          className="sc-dnqmqq qsuKL"
        >
          Hey i'm a dialog!
        </h2>
      </header>
      <div
        className="sc-gqjmRU hslCP"
      >
        <div
          className="sc-gZMcBi gpjlLd"
        >
          <div
            className="sc-fjdhpX jCpuec sc-VigVT dwEcYe"
          >
            <p
              className="sc-jTzLTM hhCCxI"
            >
              And I have some dialog content
            </p>
          </div>
        </div>
      </div>
      <footer
        className="sc-jzJRlG Zmevq"
      >
        <div
          className="sc-gqjmRU gVYQnP"
        >
          <div
            className="sc-bdVaJa bUIzkr sc-htpNat fLfkdc sc-bwzfXH iRJfEt"
            color="primary"
            disabled={false}
            href={undefined}
            onClick={[Function]}
            role="button"
          >
            <span>
               
              Cancel
               
            </span>
          </div>
          <div
            className="sc-bdVaJa fntDxJ sc-htpNat fLfkdc sc-bwzfXH iRJfEt"
            color="primary"
            disabled={false}
            href={undefined}
            onClick={[Function]}
            role="button"
          >
            <span>
               
              Agree
               
            </span>
          </div>
        </div>
      </footer>
    </div>
     
  </div>,
]
`;

exports[`should render Dialog.Actions 1`] = `
<footer
  className="sc-jzJRlG Zmevq"
>
  <div
    className="sc-gqjmRU gVYQnP"
  >
    <div
      className="sc-bdVaJa bUIzkr sc-htpNat fLfkdc sc-bwzfXH iRJfEt"
      color="primary"
      disabled={false}
      href={undefined}
      onClick={[Function]}
      role="button"
    >
      <span>
         
        Cancel
         
      </span>
    </div>
    <div
      className="sc-bdVaJa fntDxJ sc-htpNat fLfkdc sc-bwzfXH iRJfEt"
      color="primary"
      disabled={false}
      href={undefined}
      onClick={[Function]}
      role="button"
    >
      <span>
         
        Agree
         
      </span>
    </div>
  </div>
</footer>
`;

exports[`should render Dialog.Content 1`] = `
<div
  className="sc-gqjmRU hslCP"
>
  <div
    className="sc-gZMcBi gpjlLd"
  >
    <div
      className="sc-fjdhpX jCpuec sc-VigVT dwEcYe"
    >
      <p
        className="sc-jTzLTM hhCCxI"
      >
        And I have some dialog content
      </p>
    </div>
  </div>
</div>
`;

exports[`should render Dialog.Header 1`] = `
<header
  className="sc-iwsKbI gWFyxR"
>
  <h2
    className="sc-dnqmqq qsuKL"
  >
    Hey i'm a dialog!
  </h2>
</header>
`;
